--- a/src/index.css
+++ b/src/index.css
@@ -58,8 +58,8 @@ h2 {
     height: 100vh;
     background: linear-gradient(
         to bottom,
-        rgba(0, 0, 0, 0) 0%,
-        rgba(0, 0, 0, 0.6) 100%
+        rgba(0, 0, 0, 0.65) 0%,
+        rgba(0, 0, 0, 0) 100%
     ), url("assets/hero_image.jpg");
     background-size: cover;
 }
@@ -76,10 +76,6 @@ h2 {
 
 .home .secondary-title {
     color: white;
-}
-
-.home h1 span {
-    color: #1655B2;
 }
 
 .home .home-buttons {
@@ -100,13 +96,33 @@ h2 {
     background: transparent;
 }
 
-@media (max-width: 360px) {
+@media (max-width: 430px) {
     .primary-title {
         font-size: 30px;
     }
 
     .secondary-title {
         font-size: 25px;
+    }
+
+    .primary-button {
+        font-size: 16px;
+    }
+    .home .home-buttons {
+        margin-top: 20vh;
+    }
+    .home .primary-title {
+        margin-top: 50px;
+    }
+}
+
+@media (min-width: 430px) and (max-width: 537px) {
+    .primary-title {
+        font-size: 40px;
+    }
+
+    .secondary-title {
+        font-size: 30px;
     }
 
     .primary-button {
@@ -154,7 +170,7 @@ nav .logo-container h3 {
     margin-right: auto;
     max-width: 360px;
     height: 500px;
-    background-color: #F6F6F6;
+    background-color: white;
     border: solid 3px black;
     border-radius: 10px;
     padding: 40px;
@@ -193,4 +209,66 @@ nav .logo-container h3 {
     color: #3b8a03;
 }
 
+.auth-modal .logo-container {
+    display: flex;
+    align-items: baseline;
+}
+
+.auth-modal .logo-container .logo {
+    width: 48px;
+    height: 48px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.auth-modal .google-button {
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+    /*width: 100%;*/
+}
+
+.auth-modal .google-button-style {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px;
+    margin: 8px;
+    font-size: 17px;
+    border: solid 2px;
+    border-radius: 30px;
+    background-color: transparent;
+    cursor: pointer;
+    width: 100%;
+}
+
+.auth-modal .google-logo {
+    width: 24px;
+    height: 24px;
+    margin-right: 8px;
+}
+
+.auth-modal .divider {
+    display: flex;
+    align-items: center;
+}
+
+.auth-modal .divider .line-1 {
+    height: 1px;
+    width: 40%;
+    background-color: #ccc;
+    margin: 16px 10px;
+}
+.auth-modal .divider .line-2 {
+    height: 1px;
+    width: 40%;
+    background-color: #ccc;
+    margin: 16px 10px;
+}
+
+.auth-modal .divider p {
+    text-align: center;
+    margin: 16px 0;
+    text-transform: uppercase;
+}
 
