--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@ h2 {
     cursor: pointer;
 }
 
+.primary-button:disabled {
+    cursor: auto;
+}
+
 .secondary-button {
     color: rgb(121, 119, 119);
     background-color: rgb(255, 255, 255);
@@ -167,22 +171,28 @@ nav .logo-container .logo {
 
 nav .logo-container h3 {
     text-transform: uppercase;
-    /*color: white;*/
+    color: white;
 }
 
 /*------------------- Vertical Nav -----------------*/
 .vertical-nav {
-    width: 20%;
+    width: 18%;
     /*border: solid 2px;*/
     border-radius: 10px;
     background-color: white;
     position: fixed;
     height: 100%;
+    top: 0;
 }
 
-.vertical-nav .nav-text, .logo-container h3 {
+.vertical-nav .logo-container h3 {
     color: #5FB51C;
     font-weight: bold;
+}
+
+.vertical-nav .nav-text {
+    color: #5FB51C;
+    font-weight: 400;
 }
 
 .vertical-nav ul {
@@ -211,6 +221,10 @@ nav .logo-container h3 {
     width: 30px;
     height: 30px;
     color: #5FB51C;
+}
+
+.vertical-nav li .profile-img {
+    border-radius: 20px;
 }
 
 .vertical-nav .logo-container {
@@ -248,6 +262,7 @@ nav .logo-container h3 {
         width: 100%;
         align-items: baseline;
         justify-content: center;
+        top: auto;
     }
 
     .vertical-nav .logo-container {
@@ -539,7 +554,7 @@ nav .logo-container h3 {
 @media (max-width: 950px) {
     .profile-container .profile-section-container {
         width: 70%;
-        margin-left: 10%;
+        margin-left: 15%;
     }
     .profile-personal-info-section div {
         width: 100%;
@@ -652,6 +667,9 @@ nav .logo-container h3 {
 }
 
 /*-------- OnBoarding Page --------*/
+.onboarding-container .logo-container h3 {
+    color: #5FB51C;
+}
 .onboarding {
     border-top: solid 1px rgb(213, 213, 213);
 }
@@ -795,6 +813,10 @@ nav .logo-container h3 {
         margin: 5px;
     }
 
+    .onboarding form .loader {
+        margin: auto;
+    }
+
     .onboarding form .multiple-input-container label {
         padding: 5px;
         font-size: 14px;
@@ -822,47 +844,54 @@ nav .logo-container h3 {
 }
 
 .upload-profile-image-container .image-options {
-    margin: 50px auto 200px;
+    margin: 20px auto 100px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     width: 70%;
 }
 
 .upload-profile-image-container button {
-    width: 70%;
+    /*width: 40%;*/
+    margin: auto;
+    border: none;
+    font-weight: bolder;
+}
+
+.upload-profile-image-container .loader {
+    /*width: 40%;*/
     margin: auto;
 }
 
-.upload-profile-image-container .image-options div {
+.upload-profile-image-container .image-options .image-choose {
     height: 300px;
     width: 200px;
     border: solid 1px;
     border-radius: 20px;
 }
 
-.upload-profile-image-container .image-options div:hover {
+.upload-profile-image-container .image-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.upload-profile-image-container .image-options .image-choose:hover {
     cursor: pointer;
     border: solid 2px #5FB51C;
 }
 
-.upload-profile-image-container .image-options div img {
-    height: 100%;
-    width: 100%;
+.upload-profile-image-container .image-options img {
+    max-height: 350px;
     border-radius: 20px;
 }
 
-.upload-profile-image-container .image-options div:first-child {
-    text-align: center;
-}
-
-.upload-profile-image-container .image-options .user-option {
+.upload-profile-image-container .image-options .image-choose .user-option {
     margin-top: 120px;
     height: 40px;
     width: 40px;
 }
 
-.upload-profile-image-container .image-options .inputfile {
+.upload-profile-image-container .image-options .image-choose .inputfile {
     width: 0.1px;
     height: 0.1px;
     opacity: 0;
@@ -871,7 +900,7 @@ nav .logo-container h3 {
     z-index: -1;
 }
 
-.upload-profile-image-container .image-options label {
+.upload-profile-image-container .image-options .image-choose label {
     cursor: pointer;
 }
 
@@ -887,8 +916,155 @@ nav .logo-container h3 {
 }
 
 .upload-profile-image-container .image-options .selected {
+    display: none;
+}
+
+/*----------------------- Plan Card Component ---------------------- */
+
+.plan-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 350px;
+    max-height: 650px;
+    margin: auto;
+    border-radius: 20px;
+    padding: 10px 15px;
+    background-color: white;
+    color: #5FB51C;
+}
+
+.plan-card .image-container {
+    width: 100%;
+}
+
+.plan-card .image-container img {
+    border-radius: 20px;
+    border: solid 2px;
+}
+
+.plan-card .name-button-section {
+    width: 90%;
+    display: flex;
+    align-items: center;
+}
+
+.plan-card .name-button-section p {
+    font-weight: 550;
+    font-size: medium;
+    cursor: pointer;
+}
+
+.plan-card .name-button-section .chat-icon {
+    margin-left: 60%;
+    width: 30px;
+    height: 30px;
+    color: #5FB51C;
+}
+
+.plan-card .name-button-section .chat-icon:hover {
+    background-color: #dddddd;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.plan-card .plan-info-section {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
+    padding: 0;
+}
+
+.plan-card .plan-info-section li {
+    list-style: none;
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.plan-card .plan-info-section li span{
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.plan-card .plan-info-section li .text {
+    color: black;
+}
+
+.plan-card .plan-info-section li span .icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+}
+
+/*--------------- plan crud page ---------------------*/
+.plan-crud-container .plan-card {
+    margin-top: 30px;
+}
+
+.plan-crud-container h2 {
+    font-weight: bold;
+    color: #5FB51C;
+    text-transform: uppercase;
+    margin-top: 30px;
+}
+
+.plan-crud-container button {
+    border: none;
+    margin-top: 20px;
+    width: 350px;
+    font-weight: 500;
+}
+
+.plan-crud-container .error-msg {
+    color: #ee0256;
+}
+
+.plan-crud-container .plan-card input {
+    padding: 5px 5px;
+    font-size: 15px;
+    border: solid 2px rgb(219, 219, 219);
+    border-radius: 20px;
+}
+.plan-crud-container .plan-card input:focus {
+    outline: none;
     border: solid 2px #5FB51C;
 }
 
+
+@media (max-width: 320px) {
+    .plan-crud-container h2 {
+        font-size: 16px;
+    }
+    .plan-crud-container .plan-card {
+        width: 100%;
+    }
+    .plan-crud-container .plan-card .image-container {
+        width: 100%;
+    }
+    .plan-crud-container .plan-card .image-container img {
+        width: 100%;
+    }
+}
+
+@media (min-width: 321px) and (max-width: 767px){
+    .plan-crud-container h2 {
+        font-size: 20px;
+        margin: 10px auto 5px;
+    }
+    .plan-crud-container .plan-card {
+        width: 80%;
+        height: 500px;
+        margin-top: 0;
+    }
+    .plan-crud-container .plan-card .image-container {
+        height: 40%;
+        width: 100%;
+    }
+    .plan-crud-container .plan-card .image-container img {
+        height: 100%;
+    }
+}
 
 
